2013-12-26  GONG Chen  <chen.sst@gmail.com>

	* rime.xml: add symbolic icon for GNOME Shell.
	* rime_settings.*: fallback to ibus default UI options in 'panel' section.

	- ibus-rime 1.1 release.

2013-11-10  GONG Chen  <chen.sst@gmail.com>

	* librime: update to version 1.0
	* rime_settings.*: add config option 'lookup_table_orientation'.

	- ibus-rime 1.0 release.

2013-05-05  GONG Chen  <chen.sst@gmail.com>

	* brise: update to version 0.22
	* librime: update to version 0.9.9

	* Makefile: support static linking librime and its dependencies.

	- Rime 0.9.9 release.

2013-02-02  GONG Chen  <chen.sst@gmail.com>

	- Rime 0.9.8 release.

2013-01-16  GONG Chen  <chen.sst@gmail.com>

	* rime_engine.c(ibus_rime_process_key_event):
	support changing conversion mode with Caps Lock.

	* librime: updated to version 0.9.7.

	- Rime 0.9.7 release.

2013-01-12  GONG Chen  <chen.sst@gmail.com>

	* rime_engine.c: add 'Sync data' button.
	in Chinese mode, display the name of schema on status bar.

	* rime_main.c: display notifications about deployment result.

	- Rime 0.9.6 release.

2012-09-26  GONG Chen  <chen.sst@gmail.com>

	* new dependency: brise.

	- Rime 0.9.4 release.

2012-07-08  GONG Chen  <chen.sst@gmail.com>

	* UI: new Rime logo.
	* UI: add Chinese/ascii mode indicator, and Deploy button to status bar.
	* UI: show notification when deploying Rime.

	- Rime 0.9.2 release.