@@ -1,0 +1,6 @@
+Freecns Cumulus
+
+Created by Yannick Lung, 2013
+
+LICENSE
+You are free to use Freecns for commercial and personal purposes without attribution, however a credit for the work would be appreciated. You may not sell or redistribute the icons themselves as icons. Do not claim creative credit. 
