@@ -1,0 +1,10 @@
+#ifndef RIME_CONFIG_H_
+#define RIME_CONFIG_H_
+
+#define RIME_VERSION "1.2"
+
+#define IBUS_RIME_INSTALL_PREFIX "/usr"
+#define IBUS_RIME_SHARED_DATA_DIR IBUS_RIME_INSTALL_PREFIX "/share/rime-data"
+#define IBUS_RIME_ICONS_DIR IBUS_RIME_INSTALL_PREFIX "/share/ibus-rime/icons"
+
+#endif  // RIME_CONFIG_H_
