@@ -1,5 +1,6 @@
 // ibus-rime program entry
 
+#include "rime_config.h"
 #include <stdlib.h>
 #include <string.h>
 #include <signal.h>
@@ -10,7 +11,6 @@
 #include <rime_api.h>
 #include "rime_engine.h"
 #include "rime_settings.h"
-#include "rime_version.h"
 
 // TODO:
 #define _(x) (x)
@@ -18,9 +18,6 @@
 #define DISTRIBUTION_NAME _("Rime")
 #define DISTRIBUTION_CODE_NAME "ibus-rime"
 #define DISTRIBUTION_VERSION RIME_VERSION
-
-#define IBUS_RIME_INSTALL_PREFIX "/usr"
-#define IBUS_RIME_SHARED_DATA_DIR IBUS_RIME_INSTALL_PREFIX "/share/rime-data"
 
 static const char* get_ibus_rime_user_data_dir(char *path) {
   const char* home = getenv("HOME");
