@@ -1,6 +1,0 @@
-#ifndef RIME_VERSION_H_
-#define RIME_VERSION_H_
-
-#define RIME_VERSION "1.1"
-
-#endif  // RIME_VERSION_H_
