@@ -1,23 +1,0 @@
-ibus-rime (1.1-1) unstable; urgency=low
-
-  [ Qijiang Fan ]
-  * New release.
-
-  [ Guo Yixuan (郭溢譞) ]
-  * Updated Standards-Version to 3.9.5, no changes needed.
-  * Build-dep on librime-dev >= 1.0 (reverted the renaming).
-
- -- Qijiang Fan <fqj1994@gmail.com>  Sun, 15 Jun 2014 12:40:33 +0800
-
-ibus-rime (0.9.4-2) unstable; urgency=low
-
-  * Team upload.
-  * Fix libexecdir. Closes: #712581
-
- -- Osamu Aoki <osamu@debian.org>  Wed, 19 Jun 2013 22:24:56 +0900
-
-ibus-rime (0.9.4-1) unstable; urgency=low
-
-  * Initial release (Closes: #679389).
-
- -- Qijiang Fan <fqj1994@gmail.com>  Fri, 08 Jun 2012 18:04:26 +0800
